# stackalpha

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  TRADING_SYSTEM_README.md  docker-compose.yml  pyproject.toml  test_binance_flow.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_circuit_breaker_columns.py  a1b2c3d4e5f6_add_risk_settings_table.py  b2c3d4e5f6a7_add_is_subscribed_to_users.py  c3d4e5f6a7b8_add_agent_wallet_fields.py  d4e5f6a7b8c9_add_binance_exchange_support.py  e5f6a7b8c9d0_change_wallet_type_master_to_agent.py  f6a7b8c9d0e1_add_risk_percent_per_trade.py  fcbf6c2fcc92_initial_migration_with_uuid.py  g7h8i9j0k1l2_add_circuit_breaker_columns.py  h8i9j0k1l2m3_add_telegram_bot_token.py  i9j0k1l2m3n4_add_system_config_table.py  j0k1l2m3n4o5_update_risk_defaults.py  k1l2m3n4o5p6_simplify_risk_settings.py  l2m3n4o5p6q7_add_margin_per_trade.py  m3n4o5p6q7r8_fix_margin_defaults.py  n4o5p6q7r8s9_fix_margin_100.py  o5p6q7r8s9t0_add_risk_counters_reset.py
app/: __init__.py  admin.py  config.py  database.py  dependencies.py  main.py
app/core/: __init__.py  exceptions.py  middleware.py  security.py
app/models/: __init__.py  affiliate.py  exchange_connection.py  notification.py  risk_settings.py  signal.py  subscription.py  system_config.py  trade.py  user.py  wallet.py
app/schemas/: __init__.py  affiliate.py  auth.py  common.py  exchange.py  risk.py  subscription.py  trading.py  user.py  wallet.py
app/scripts/: seed_admin.py
app/services/: __init__.py  affiliate_service.py  auth_service.py  circuit_breaker.py  email_service.py  exchange_connection_service.py  geolocation_service.py  payment_service.py  telegram_service.py  top_gainers_service.py  trade_stream_service.py  twitter_service.py  user_service.py  wallet_service.py
app/utils/: __init__.py  crypto.py  device.py  email.py  helpers.py  validators.py
app/workers/: __init__.py  celery_app.py  (+2 more)
deploy/: nginx.conf  setup-server.sh  stackalpha-api.service  stackalpha-celery-beat.service  stackalpha-celery-worker.service
docker/: Dockerfile  Dockerfile.celery  nginx.conf
tests/: conftest.py  test_auth.py  test_auto_execute.py  test_binance_e2e.py  test_risk_pipeline.py
(+80 files in other folders)
